Minor edits to draft above line 260

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -118,12 +118,12 @@ The resulting feedbacks to the climate system (e.g., decreased C storage, altere
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. 
 Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017] by buffering extreme temperatures along with other macroclimatic conditions in the understory. 
 This creates a vertical stratification of biophysical environmental conditions such as temperature, light, wind, humidity and CO~2~ that influences leaf traits, thermoregulation and metabolism along the gradient, with implications for whole plant performance [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016].
-Despite the fact that this vertical gradient inevitably shapes nearly every aspect of plant metabolism, demography, and ecology, we lack synthetic understanding of these gradients. 
+Despite the fact that this vertical gradient inevitably shapes nearly every aspect of plant metabolism, demography, and ecology, we lack synthetic [replace synthetic w comprehensive?] understanding of these gradients. 
 *(@niinemetsWithincanopyVariationRate2004a highlights how biophysical and photosynthetic gradients vary along the vertical canopy profile, however our current knowledge of this topic is lacking.)*
 Importantly, this limits our ability to understand how warming temperatures will affect leaf-level metabolism, whole-plant performance, and, in turn, forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions.
 
 
-**Here we review biophysical and biological patterns across the vertical canopy gradient in forests, how these gradients affect leaf-level processes and, in turn, whole plant performance , and the implications for understanding forest ecosystem responses and feedbacks to climate change .**
+**Here, we review biophysical and biological patterns across the vertical canopy gradient in forests, how these gradients affect leaf-level processes and, in turn, whole plant performance , and the implications for understanding forest ecosystem responses and climate change feedbacks.**
 We structure the review around five major questions (Fig. `r fig_schematic`).
 
 i.	How does the biophysical environment vary with height in forests?
@@ -136,7 +136,7 @@ iv.	How does leaf metabolism respond to [air or leaf?] temperature in canopy and
 
 v. What are the implications of vertical canopy gradient patterns for the ecological and climate change responses of canopy versus understory trees?
 
-We then consider the implications for modeling/ scaling /climate change responses. 
+We then consider the implications for ecosystem-scale dynamics and climate change feedbacks, as well as remote sensing and modeling opportunities for future research. 
 
 *Our primary interest is the gradient in height and exposure from the top of the canopy to the understory in forests. However, because a lot of the relevant research has focused on exposure gradients near ground level (e.g., comparisons of sun and shade leaves), and the implications [or utility] for ecosystem models we also review studies focused on exposure gradients.*
 
@@ -162,13 +162,13 @@ In this review, we focus primarily on growing season conditions, including leaf 
 ![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for 5/6 sites in the National Ecological Observatory Network (NEON)**. Shown are  height profiles in growing season (a) leaf area density, (b) proportion light incidence, (c) proportion sun leaves, and July mean ± 1 standard deviation for (d) maximum photosyntehtically active ratiation (PAR), (e) maximum wind speed, (f) minimum humidity, (g) maximum $T_{air}$, and (h) maximum biological temperature, $T_{bio}$. All variables are normalized relative to the height of the top of the canopy (**DETAILS**) and the conditions at the point of lowest measurement.   ([issue 20](https://github.com/EcoClimLab/vertical-thermal-review/issues/20)) ](NEON_height_profiles/figures/profile_all.png)
 
 ### Light environments
-**Light conditions, specifically changes in proportion incident light and photosynthetically active radiation (PAR), vary along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`; @koike_leaf_2001].** 
+**Light conditions, specifically changes in the proportion of incident light and photosynthetically active radiation (PAR), vary along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`; @koike_leaf_2001].** 
 Generally, upper canopies in dense forests are exposed to greater PAR values and limit light penetration to canopy interiors, lower canopy layers, and the understory. Shaded regions experience lower values of PAR with different light quality [in ranges of blue, orange and red]. The light gradient is more pronounced under broadleaf forests than needleleaf forests [@lowmanForestCanopies1995; @aussenacInteractionsForestStands2000a; @niinemetsPackingPhotosyntheticMachinery2009; @poorterMetaanalysisPlantResponses2019b]
 (Fig. `r fig_NEON_vertical`).
 
-In heterogeneous canopies [with high gap fractions], the distance from the outer canopy [to X?] is a better proxy for light environment than height (Parker 1995) and lower canopy light environments are highly variable, ranging from high light gaps to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]
+In heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy [to X?] is a better proxy for light environment than height (Parker 1995). Lower canopy light environments are highly variable, ranging from high light gaps to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]
 
-Tropical forests with densely packed overstory trees limit light to subsequent canopy layers and forest understories. Tropical forest floors receive approximately 1-2%  of the incident light that hits the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006]. However, vertical canopy layers and forest floors also receive light permeating through canopy gaps, as well as intermittent light penetration from tree, branch, and leaf movement caused by wind, defined collectively as sunflecks. Sunflecks can provide 10-80% of photon flux density for photosynthesis in canopy layers and understory, depending on canopy attributes such as foliage density, height and architecture [@waySunflecksTreesForests2012]
+Tropical forests with densely packed overstory trees limit light reaching subsequent canopy layers and forest understories. Tropical forest floors receive approximately 1-2%  of the incident light that hits the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006]. However, vertical canopy layers and forest floors also receive light permeating through canopy gaps, as well as intermittent light penetration from tree, branch, and leaf movement caused by wind, defined collectively as sunflecks. Sunflecks can provide 10-80% of photon flux density for photosynthesis in canopy layers and understory, depending on canopy attributes such as foliage density, height and architecture [@waySunflecksTreesForests2012]
 
 This difference in light regimes along a vertical profile is an important driver of plasticity in leaf traits, leaf physiology, adaptation, and thermal sensitivity. Leaves thus exhibit variation in leaf trait adaptations from sun to shade both along a vertical intra-canopy gradient, as well as inter-canopy [@michaletzEnergeticCarbonEconomic2016; @fauset_differences_2018; @niinemetsResponsesForestTrees2010; @sackHowStrongIntracanopy2006; @niinemetsControversyTraitsConferring2006; Osnas et al. 2018].  
 
@@ -206,8 +206,7 @@ However, similar minimum temperatures under forest canopies have been observed i
 
 Along with temperature, forest canopies moderate relative humidity (RH) in below-canopy microclimates. In three European forest types (Broadleaved, Non-Pine Conifer, Pine), canopy buffering decreased daily maximum $T_{air}$ and increased daily minimum RH in below-canopy microclimate compared to a nearby open area. Moderating capacity was stronger under broadleaved and non-pine conifer forests than pine, and greater in wetter conditions, and in summer and autumn months than winter [@vonarxSpatiotemporalEffectsForest2012a]. 
 
-RH, in combination with temperature, determines vapor pressure deficit, $VPD$. Atlantic forests in Brazil during the wet season tend to have higher $T_{air}$, and $VPD$ in the upper canopy and canopy gaps than in the understory where $T_{air}$ and $VPD$ tend to be lower [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017].  
-This means that canopy leaves tend to be exposed to higher *evaporative demand*, higher stomatal constraints [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. In northeastern US mesic temperate forests, tree-ring analyis [__time-scale] showed that the upper canopy was observed to be more sensitive to $VPD$, whereas the understory was insensitive [@rollinsonClimateSensitivityUnderstory, 2020]
+RH, in combination with temperature, determines vapor pressure deficit ($VPD$), an important metric expressing the driving force of water loss from a leaf. Atlantic forests in Brazil during the wet season tend to have higher $T_{air}$, and $VPD$ in the upper canopy and canopy gaps than in the understory where $T_{air}$ and $VPD$ tend to be lower [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017]. This means that canopy leaves tend to be exposed to higher *evaporative demand*, higher stomatal constraints [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. In northeastern US mesic temperate forests, tree-ring analyis [__time-scale] showed that the upper canopy was observed to be more sensitive to $VPD$, whereas the understory was insensitive [@rollinsonClimateSensitivityUnderstory, 2020]
 
 ### Carbon dioxide
 
@@ -247,7 +246,7 @@ However vertical climate gradients within forests are known to be steeper than t
 *(KAT: I think we want max 2-3 paragraphs here before getting to the subsection on  intra-specific variation. These paragraphs need to cover the content before then, including light vs height and how those relate to the data that have been collected,  setting up the distinction between intra- vs inter-specific variation, and some general intro, which is currently at beginning of inter-specific section.)*
 
 **Leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016] and show different degrees of intraspecific foliar plasticity in accordance with the intensity and availability of light, optimizing water uptake, heat, C uptake and metabolism across forest vertical strata [@rozendaalPlasticityLeafTraits2006].**
-After the formation of leaves to integrated light, it takes 30-60 days for traits to stabilize in woody and herbaceous species [@keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. A network of sensory photoreceptors in leaves, such as phytochromes, mediate leaf-level responses to PAR, and the ratio of red to far red radiation [R:FR] intercepting the leaf surface. This enables acclimation or avoidance responses through the development of necessary leaf traits [@casalPhotoreceptorSignalingNetworks2013]. Degrees of high irradiance give rise to variation in sun-leaf traits, while degrees of low irradiance-- characterized by shade-- result in variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; @sackHowStrongIntracanopy2006], ultimately influencing leaf structural, chemical and physiological traits as well [@keenanGlobalLeafTrait2016]. 
+After the formation of leaves to integrated light, it takes 30-60 days for traits to stabilize in woody and herbaceous species [@keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. A network of sensory photoreceptors in leaves, such as phytochromes, mediate leaf-level responses to PAR and the ratio of red to far red radiation [R:FR] intercepting the leaf surface. This enables acclimation or avoidance responses through the development of necessary leaf traits [@casalPhotoreceptorSignalingNetworks2013]. Degrees of high irradiance give rise to variation in sun-leaf traits, while degrees of low irradiance-- characterized by shade-- result in variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; @sackHowStrongIntracanopy2006], ultimately influencing leaf structural, chemical and physiological traits as well [@keenanGlobalLeafTrait2016]. 
 
 *(Elsa: it may also be worth mentioning leaf turnover / leaf longevity briefly in the above paragraph in the context of leaf development and trait formation.)*
 *(Krista: the above is really interesting, and I like the idea of starting off the section by mentioning what controls the formation of leaf traits. However, I think it gets into more detail than needed. I'd follow Elsa's suggestion above without increasing the length. Also, is there work out there on how they're influenced by temperature/ water at the time of formation? I'd broaden to include the full microenviroment (without increasing length)*)
@@ -260,7 +259,7 @@ After the formation of leaves to integrated light, it takes 30-60 days for trait
 
 ### Are traits shaped more by height or light?
 
-Light based acclimation in leaf traits is well established, while research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light. However, studies that have measured LMA in relation to height have found that in tropical forests LMA-height predicted stronger correlation between area- based respiration versus foliar nutrients, whereas Q10 and E10 remained constant with height [Cavaleri et al. 2008]. In temperate Acer saccharum forest, within-canopy Acer saccharum exhibited greater LMA and $N area$ with height early in the growing season as a result of hydrostatic constraints on leaf morphology; however, in later growing season LMA and $N area$ continued to increase in the upper canopy due to light driven changes [@cobleLightDrivesVertical2014a; @cobleLightAcclimationOptimizes2015; @cobleHowVerticalPatterns2016].In addition, carbon isotope composition also increased with height, independent of light [@cobleLightAcclimationOptimizes2015]
+Light based acclimation in leaf traits is well established, while research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light. However, studies that have measured LMA in relation to height have found that in tropical forests LMA-height predicted stronger correlation between area- based respiration versus foliar nutrients, whereas Q10 and E10 remained constant with height [Cavaleri et al. 2008]. In a temperate Acer saccharum forest, within-canopy Acer saccharum exhibited greater LMA and $N area$ with height early in the growing season as a result of hydrostatic constraints on leaf morphology; however, in later growing season LMA and $N area$ continued to increase in the upper canopy due to light driven changes [@cobleLightDrivesVertical2014a; @cobleLightAcclimationOptimizes2015; @cobleHowVerticalPatterns2016].In addition, carbon isotope composition also increased with height, independent of light [@cobleLightAcclimationOptimizes2015]
 
 Height-based leaf trait variation in *Quercus alba* and *Quercus velutina* showed decrease in lobation with increased height in two tall species, suggesting an adaptation to hydraulic constraints in order to lower evapotranspiration with increasing height by decreasing lobation [@kusiPlasticLeafMorphology2020]. However, @sackHowStrongIntracanopy2006 did not observe trait variation based on height in Quercus spp.
 
