--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -156,8 +156,8 @@ In this review, we focus primarily on growing season conditions, including leaf 
 
 ### Light environments
 **Light conditions, specifically changes in proportion incident light and photosynthetically active radiation (PAR), vary along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`; @koike_leaf_2001].** 
-Generally, upper canopies in dense forests are exposed to greater PAR values and limit light penetration to canopy interiors, lower canopy layers, and the understory. Shaded regions experience lower values of PAR with different light quality [in ranges of blue, orange and red]. The light gradient is more pronounced under broadleaf forests than needleleaf forests [@lowmanForestCanopies1995; @aussenacInteractionsForestStands2000a; @niinemetsPackingPhotosyntheticMachinery2009; @poorterMetaanalysisPlantResponses2019b]
-(Fig. `r fig_NEON_vertical`).
+Generally, upper canopies in dense forests are exposed to greater PAR values and limit light penetration to canopy interiors, lower canopy layers, and the understory. Shaded regions experience lower values of PAR with different light quality [in ranges of blue, orange and red]. 
+The light gradient is more pronounced under broadleaf forests than needleleaf forests [Fig. `r fig_NEON_vertical`; @lowmanForestCanopies1995; @aussenacInteractionsForestStands2000a; @niinemetsPackingPhotosyntheticMachinery2009; @poorterMetaanalysisPlantResponses2019b].
 
 In heterogeneous canopies [with high gap fractions], the distance from the outer canopy [to X?] is a better proxy for light environment than height (Parker 1995) and lower canopy light environments are highly variable, ranging from high light gaps to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]
 
@@ -168,8 +168,8 @@ This difference in light regimes along a vertical profile is an important driver
 -	Sunflecks: Leaky et al. 2003--from Marielle, "This is another, higher resolution axis of the variability of microenvironments that is probably quite important to address. (Also see the papers by Robin Chazdon on temporal variability of light environments). Maybe we will want to add these sentences (above) and something about sunflecks to a separate section that specifically addresses sources of variation in forest structure & microenvironments (e.g., vertical, horizontal, seasonal, diurnal, and with disturbance)?"
 
 ### Wind speeds 
-**Wind speeds are also higher at the top of the canopy (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`).**
-Across the **#** forested NEON sites, windspeeds universally increased with height, with daily maximum wind speeds averaging up to **#** m s^-1^ higher at the top of the vertical profile than at the bottom. 
+**Wind speeds are also higher at the top of the canopy (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`), owing to... [**REFS**].**
+Across all **#** forested NEON sites, wind speeds increased with height, with daily maximum wind speeds at the top of the averaging up to **#** m s^-1^ higher at the top of the vertical profile than at the bottom. 
 Consistent with these results from NEON sites, higher wind speeds at greater heights within a forest canopy have been observed in both closed canopy forests [@barnardSeasonalVariationCanopy2016a; @mcgregor_tree_nodate] and open savannas [@curtis_intracanopy_2019].
 
 ### Air temperature 
@@ -184,7 +184,6 @@ Minimum $T_{air}$ is also buffered by forest canopies under some conditions.
 Higher minimum temperatures under forest canopies relative to nearby clearings have been observed across Europe [@zellweger_seasonal_2019] and in the northwestern United States [@davis_microclimatic_2019].(Martijn: should we refer to mechanisms at this point? (e.g., greater radiative heat loss in exposed areas resulting in lower Tmin))
 However, similar minimum temperatures under forest canopies have been observed in tropical forests in Panama [@rey-sanchez_spatial_2016] and coastal Brazil [@fauset_differences_2018], as well as in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate; @nakamuraForestsTheirCanopies2017].
 
-
 *(Add something about risk of freeze.)* 
 
 ### Humidity and evaporative demand
@@ -195,7 +194,7 @@ However, similar minimum temperatures under forest canopies have been observed i
 Along with temperature, forest canopies moderate relative humidity (RH) in below-canopy microclimates. In three European forest types (Broadleaved, Non-Pine Conifer, Pine), canopy buffering decreased daily maximum $T_{air}$ and increased daily minimum RH in below-canopy microclimate compared to a nearby open area. Moderating capacity was stronger under broadleaved and non-pine conifer forests than pine, and greater in wetter conditions, and in summer and autumn months than winter [@vonarxSpatiotemporalEffectsForest2012a]. 
 
 RH, in combination with temperature, determines vapor pressure deficit, $VPD$. Atlantic forests in Brazil during the wet season tend to have higher $T_{air}$, and $VPD$ in the upper canopy and canopy gaps than in the understory where $T_{air}$ and $VPD$ tend to be lower [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017].  
-This means that canopy leaves tend to be exposed to higher *evaporative demand*, higher stomatal constraints [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. In northeastern US mesic temperate forests, tree-ring analyis [__time-scale] showed that the upper canopy was observed to be more sensitive to $VPD$, whereas the understory was insensitive [@rollinsonClimateSensitivityUnderstory, 2020]
+This means that canopy leaves tend to be exposed to higher *evaporative demand*, higher stomatal constraints [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. 
 
 ### Carbon dioxide
 
@@ -481,8 +480,10 @@ Many observations of larger trees suffering more during drought (Bennett et al. 
 One likely mechanism behind this pattern is that the crowns of larger trees exist higher in the vertical profile and therefore are exposed to higher evaporative demand and solar radiation [@mcgregor_tree_nodate].
 Although drought is primarily a hydraulic problem, lack of water --> lower gs --> higher leaf T, so leaves face tradeoffs of water loss vs potentially damaging leafT.
 
+In northeastern US mesic temperate forests, tree-ring analyis [__time-scale] showed that the upper canopy was observed to be more sensitive to $VPD$, whereas the understory was insensitive [@rollinsonClimateSensitivityUnderstory, 2020]
+
 **There is also recently emerging evidence that understory trees tend to exhibit greater growth declines with $T_{air}$ under mesic conditions.** 
-In eight forests across the northeast United States, growth rates of understory trees declined sharply at higher $T_{air}$ [Fig `r fig_treerings` **???**; Rollinson et al., in press].
+In eight forests across the northeast United States, growth rates of understory trees declined sharply at higher $T_{air}$ [Fig `r fig_treerings` **???**; @rollinsonClimateSensitivityUnderstory].
 This pattern is initially counter-intuitive in that sun-exposed leaves can experience greater elevation of $T_{leaf}$ over $T_{air}$ than shade leaves (Fig. `r fig_leaf_T` **???**). 
 However, given adequate moisture to sustain high $g_s$, canopy leaves exposed to more wind and lower humidity should be more effective at cooling when $T_{air}$ exceeds physiological optima (Fig. `r fig_leaf_T`).
 It is also possible that competition is accelerated under warmer temperatures.
